[package]
name = "glib-signal"
version = "0.1.0" # keep in sync with html_root_url
authors = ["arcnmx"]
edition = "2021"
rust-version = "1.60"

description = "GObject signal bindings"
keywords = ["glib", "gobject", "signal", "async", "futures"]

documentation = "http://docs.rs/glib-signal/"
repository = "https://github.com/arcnmx/glib-signal.rs"
readme = "src/README.md"
license = "MIT"

include = [
	"/src/**",
	"/README*",
	"/COPYING*",
]

[package.metadata.docs.rs]
features = ["dox", "futures"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
glib = { version = "0.16" }
futures-core = { version = "0.3", optional = true }
futures-channel = { version = "0.3", optional = true }

[features]
default = []
futures = ["dep:futures-core", "dep:futures-channel"]
dox = ["glib/dox"]

[workspace]
members = ["examples"]
