[package]
name = "glib-signal-examples"
version = "0.0.0"
authors = ["arcnmx"]
edition = "2018"
publish = false

[dependencies]
glib-signal = { version = "0.2", features = ["futures"], path = "../" }
futures = "0.3"
glib = { version = "0.17" }
ctrlc = { version = "3.0", features = ["termination"] }
